--- a/miniprogram/pages/controlMachine/controlMachine.wxml
+++ b/miniprogram/pages/controlMachine/controlMachine.wxml
@@ -1,2 +1,11 @@
 <!--miniprogram/pages/controlMachine/controlMachine.wxml-->
 <text>miniprogram/pages/controlMachine/controlMachine.wxml</text>
+<mp-dialog
+ title="test"
+ show="{{true}}"
+ bindbuttontap="tapDialogButton"
+ buttons="{{[{text: '取消'}, {text: '确认'}]}}"
+>
+	<view>test content</view>
+</mp-dialog>
+
