--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,2 +1,13 @@
-<!--miniprogram/pages/index/index.wxml-->
-<text>miniprogram/pages/index/index.wxml</text>
+<!-- miniprogram/pages/index/index.wxml -->
+<view class="container">
+    <mp-form-page title="{{title}}" subtitle="{{subtitle}}">
+        <mp-form id="form" rules="{{rules}}" models="{{formData}}" />
+        <view slot="button">
+            <navigator url="../alterSettings/alterSettings" open-type="navigate" class="goto-alter-settings">
+                <button class="weui-btn" type="primary" bindtap="submitForm">
+                    Set up and GO!
+                </button>
+            </navigator>
+        </view>
+    </mp-form-page>
+</view>
