--- a/miniprogram/pages/alterSettings/alterSettings.wxml
+++ b/miniprogram/pages/alterSettings/alterSettings.wxml
@@ -1,26 +1,28 @@
 <!--miniprogram/pages/alterSettings/alterSettings.wxml-->
 
 <mp-toptips msg="{{error}}" type="error" show="{{error}}" />
-<mp-form-page title="Settings" subtitle="Almost there!">
+<mp-form-page title="{{title}}" subtitle="Almost there!">
 	<view class="page__bd">
 		<mp-form id="form" rules="{{rules}}" models="{{formData}}">
 			<mp-cells title="Things about you" footer="Everything will only be visible to house members.">
 				<view class="weui-cells__title">What is your name? *</view>
-				<mp-cell prop="user_name" title="Name" ext-class="">
+				<mp-cell prop="userName" title="Name" ext-class="">
 					<input
 					 bindinput="formInputChange"
-					 data-field="username"
+					 data-field="userName"
 					 class="weui-input"
 					 placeholder="Ben George"
+					 value="{{formData.userName}}"
 					/>
 				</mp-cell>
 				<view class="weui-cells__title">What is your room number? *</view>
-				<mp-cell prop="room_number" title="Room" ext-class="">
+				<mp-cell prop="roomNumber" title="Room" ext-class="">
 					<input
 					 bindinput="formInputChange"
-					 data-field="roomnumber"
+					 data-field="roomNumber"
 					 class="weui-input"
 					 placeholder="C415"
+					 value="{{formData.roomNumber}}"
 					/>
 				</mp-cell>
 			</mp-cells>
