--- a/miniprogram/pages/controlMachine/controlMachine.wxml
+++ b/miniprogram/pages/controlMachine/controlMachine.wxml
@@ -9,17 +9,33 @@
  buttons="{{buttons}}"
 />
 <mp-toptips msg="{{error}}" type="error" show="{{error}}" />
-<view class="container">
-	<mp-form-page title="{{title}}" subtitle="{{subtitle}}">
-		<mp-form id="form" rules="{{rules}}" models="{{formData}}" />
-		<button class="weui-btn" type="primary" bindtap="open">Open</button>
-		<view class="weui-flex">
-			<view class="weui-flex__item">
-				<button class="weui-btn" type="primary" bindtap="listLaundry">List my laundries</button>
-			</view>
-			<view class="weui-flex__item">
-				<button class="weui-btn" type="primary" bindtap="gotoSettings">Review my settings</button>
-			</view>
+<mp-form-page title="{{title}}" subtitle="{{subtitle}}">
+	<mp-cells>
+		<mp-cell title="Boys' side">
+			<image src="/images/boy-side-base.svg" class="base-image" />
+		</mp-cell>
+		<mp-cell title="Girls' side">
+			<image src="/images/girl-side-base.svg" class="base-image" />
+		</mp-cell>
+	</mp-cells>
+	<view class="machine-image-container" wx:for="{{machines}}" wx:key="item">
+		<image
+		 class="machine-image"
+		 src="{{item.name[0]=='w'?'/images/washing-machine.svg':'/images/tumble-dryer.svg'}}"
+		 id="{{item.name}}"
+		 style="width:70rpx;position:absolute;z-index:2;top:{{item.location[0]}};left:{{item.location[1]}};"
+		 bindtap="{{item.handlerName}}"
+		/>
+	</view>
+	<button class="weui-btn" type="primary" bindtap="open">Open</button>
+	<view class="weui-flex">
+		<view class="weui-flex__item">
+			<button class="weui-btn" type="primary" bindtap="listLaundry">List my laundries</button>
 		</view>
-	</mp-form-page>
-</view>
+		<view class="weui-flex__item">
+			<button class="weui-btn" type="primary" bindtap="gotoSettings">
+				Review my settings
+			</button>
+		</view>
+	</view>
+</mp-form-page>
