--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,13 +2,13 @@
 
 <mp-toptips msg="{{error}}" type="error" show="{{error}}" />
 <mp-form-page title="{{title}}" subtitle="{{subtitle}}">
-	<mp-cells ext-class="" title="">
+	<!--mp-cells ext-class="" title="">
 		<mp-cell value="Please wait..." wx:if="{{showWait}}" />
-	</mp-cells>
-	<view class="weui-btn-area" wx:if="{{!showWait}}">
-		<button class="weui-btn" type="primary" bindtap="gotoSettings">
+	</mp-cells-->
+	<view class="weui-btn-area">
+	  <mp-loading type="circle" show="{{showWait}}" tips="Please wait..."></mp-loading>
+		<button class="weui-btn" type="primary" bindtap="gotoSettings" wx:if="{{!showWait}}">
 			Set up and GO!
 		</button>
 	</view>
 </mp-form-page>
-
