--- a/miniprogram/pages/controlMachine/controlMachine.wxml
+++ b/miniprogram/pages/controlMachine/controlMachine.wxml
@@ -17,12 +17,12 @@
  buttons="{{buttonsSAMN}}"
 />
 <mp-toptips msg="{{error}}" type="error" show="{{error}}" />
-<view class="container">
+<view class="container" wx:if="{{!showForm}}">
 	<view class="weui-form__text-area weui-form__text-area">
 		<view class="weui-form__title">{{title}}</view>
 		<view class="weui-form__desc">{{subtitle}}</view>
 	</view>
-		<button class="weui-btn" type="default" bindtap="showUD">Show Usage</button>
+	<button class="weui-btn" type="default" bindtap="showUD">Show Usage</button>
 	<mp-cells title="Boys' side" class="base-image-container">
 		<image src="/images/boy-side-base.svg" class="base-image" />
 	</mp-cells>
@@ -42,6 +42,15 @@
 		<button class="weui-btn" type="primary" bindtap="listLaundry">My Laundries in Progress</button>
 		<button class="weui-btn" type="primary" bindtap="gotoSettings">Settings</button>
 	</view>
-	<view id="usageView">
-	</view>
+	<view id="usageView" />
 </view>
+
+<mp-form-page title="{{title}}" subtitle="{{subtitle}}" wx:if="{{showForm}}">
+	<mp-form id="form" rules="{{rules}}" models="{{formData}}">
+            <mp-cells title="What's your purpose?">
+                <mp-checkbox-group prop="radio" multi="{{false}}" bindchange="radioChange">
+                    <mp-checkbox wx:for="{{purposeRadioItems}}" wx:key="value" label="{{item.name}}" value="{{item.value}}" checked="{{item.checked}}"></mp-checkbox>
+                </mp-checkbox-group>
+            </mp-cells>
+	</mp-form>
+</mp-form-page>
